--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,15 @@
+/* Rajdhani Font */
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
+/* Tajawal Font */
+@import url('https://fonts.googleapis.com/css2?family=Tajawal&display=swap');
+/* Sacramento CURSIVE font */
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html {
+        font-family: "Tajawal", sans-serif
+    }
+}
